refactory do projeto com o uso de swagger-autogen
